Fixup hero row spacing

--- a/static/css/section/_download.scss
+++ b/static/css/section/_download.scss
@@ -87,6 +87,7 @@
 
     .row {
         padding: 40px;
+        padding-top: 2em;
     }
 
     #main-content .row-hero {
